--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,13 +1,13 @@
   <!-- Footer -->
 
-  <div class="contacto">
+  <div class="contacto" *ngFor="let per of personas">
     <h4>Contáctame!
     <button type="button" class="btn btn-success editar">Editar</button>
     <button type="button" class="btn btn-danger borrar">X</button>
     </h4>
     <div class="contacto-contenido">
-      Teléfono: +54 3471-521764 <br>
-      e-Mail: santidure2002@gmail.com <br>
+      Teléfono: {{per.telefono}} <br>
+      e-Mail: {{per.email}} <br>
     </div>
     <input id="inputUno" type="text" placeholder="Presentate">
   </div>
