--- a/src/app/componentes/presentacion/presentacion.component.html
+++ b/src/app/componentes/presentacion/presentacion.component.html
@@ -1,11 +1,10 @@
 <!-- Presentacion -->
-<div id="presentacion">
+<div id="presentacion" *ngFor="let persona of personas">
   <h2 class="presentacion-h2">Presentacion
-    <button type="button" class="btn btn-success editar">Editar</button>
-    <button type="button" class="btn btn-danger borrar">X</button>
+    <button  class="btn btn-success editar">Editar</button>
+    <button  class="btn btn-danger borrar">X</button>
   </h2>
-  <p class="presentacion-p" id="texto1">Estudiante autodidacta de desarrollo Web Full Stack Nivel Junior. Con
-    conocimientos de diseño gráfico y animación digital, creativo, proactivo, con fácil adaptación a grupos de trabajo
-    y siempre dispuesto a ampliar conocimientos día a día.</p>
-  <input id="inputUno" type="text" placeholder="Presentate">
+  <p class="presentacion-p" id="texto1">{{persona.presentacion}}</p>
+
+  <input  id='inputUno' type="text" placeholder="Presentate">
 </div>
