--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,15 +1,33 @@
-<form>
-  <div class="row mb-3 ">
-    <label for="inputEmail3" class="col-sm-2 col-form-label">Correo electrónico</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3">
+<section class="vh-100" style="background-color: #000000;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card shadow-2-strong" style="border-radius: 1rem;">
+
+          <div class="card-body p-5 text-center">
+
+            <h3 class="mb-5">Incie Sesión</h3>
+            <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+            <div class="form-outline mb-4">
+              <input type="text" id="nombreUsuario" class="form-control form-control-lg" name="nombreUsuario" [(ngModel)]="nombreUsuario" required/>
+              <label class="form-label" for="nombreUsuario">Usuario</label>
+            </div>
+
+            <div class="form-outline mb-4">
+              <input type="password" id="password" class="form-control form-control-lg" name="password" [(ngModel)]="password" required/>
+              <label class="form-label" for="password">Contraseña</label>
+            </div>
+
+
+
+            <button class="btn btn-primary btn-lg btn-block" type="submit" >Ir</button>
+
+          </form>
+          </div>
+
+        </div>
+
+      </div>
     </div>
   </div>
-  <div class="row mb-3">
-    <label for="inputPassword3" class="col-sm-2 col-form-label">Contraseña</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3">
-    </div>
-  </div>
-  <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-</form>
+</section>
