--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,7 +1,8 @@
   <!-- Acerca de -->
   <div class="acerca-de">
     <div class="puesto-foto" *ngFor="let persona of personas">
-      <img id="perfil" src="../assets/img/Perfil.jpg"  alt="Santiago Duré">
+      <!-- aca falta agregar el url de la foto -->
+      <img id="perfil" src={{persona.urlFoto}}  alt="Santiago Duré">
       <h1 class="name">{{persona.nombre}} {{persona.apellido}} - Diseñador Web Full Stack Jr.</h1>
     </div>
   </div>
