--- a/src/app/componentes/conocimientos/edit-conocimientos.component.html
+++ b/src/app/componentes/conocimientos/edit-conocimientos.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="cono">
   <div class="row">
-      <div>
+      <div id="editC">
           <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
               <div class="form-group">
                   <label for="nombreC">Nombre</label>
