--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -14,7 +14,7 @@
           <tbody>
               <tr *ngFor="let exp of experiencias">
                   <td>
-                      <b>{{exp.nombreE}}</b>
+                      <b>- {{exp.nombreE}}</b>
                   </td>
                   <td>{{exp.descripcionE}}</td>
 
