--- a/src/app/componentes/presentacion/presentacion.component.html
+++ b/src/app/componentes/presentacion/presentacion.component.html
@@ -1,8 +1,8 @@
 <div class="row" id="presentacion">
   <h2 class="presentacion-h2">Presentacion</h2>
    <div class="col-lg-2"></div>
-  <div class="col lg 1"></div>
-  <div class="col-lg-11 ">
+
+  <div class="">
       <table class="table">
           <tbody>
               <tr *ngFor="let per of personas">
