--- a/src/app/componentes/proyectos/new-proyecto.component.html
+++ b/src/app/componentes/proyectos/new-proyecto.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-      <div>
+      <div id="newP">
           <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
               <div class="form-group">
                   <label for="nombre">Nombre del proyecto</label>
