--- a/src/app/componentes/conocimientos/new-conocimientos.component.html
+++ b/src/app/componentes/conocimientos/new-conocimientos.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-      <div>
+      <div id="newC">
           <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
               <div class="form-group">
                   <label for="nombreC">Nombre</label>
