--- a/src/app/componentes/educacion/edit-estudios.component.html
+++ b/src/app/componentes/educacion/edit-estudios.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="est">
   <div class="row">
-      <div>
+      <div id="editEs">
           <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
               <div class="form-group">
                   <label for="nombreEst">Nombre</label>
