--- a/src/app/componentes/educacion/new-estudios.component.html
+++ b/src/app/componentes/educacion/new-estudios.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-      <div>
+      <div id="newEs">
           <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
               <div class="form-group">
                   <label for="nombreEst">Nombre</label>
@@ -11,7 +11,7 @@
                   <input type="text" class="form-control" id="especializacion" name="especializacion" [(ngModel)]="especializacion" required>
               </div>
               <button class="btn btn-primary">
-                  Agregar estudio
+                  Agregar
               </button>
           </form>
       </div>
