--- a/src/app/componentes/experiencia/edit-experiencia.component.html
+++ b/src/app/componentes/experiencia/edit-experiencia.component.html
@@ -1,13 +1,13 @@
 <div class="container" *ngIf="expLab">
   <div class="row">
-      <div>
+      <div id="editE">
           <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
               <div class="form-group">
-                  <label for="nombreE">Nombre de la empresa</label>
+                  <label for="nombreE">Expeiencia</label>
                   <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE" required>
               </div>
               <div class="form-group">
-                  <label for="descripcionE">Descripcion de la tarea</label>
+                  <label for="descripcionE">Descripcion</label>
                   <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
               </div>
               <button class="btn btn-primary">
