--- a/src/app/componentes/habilidades/edit-habilidad.component.html
+++ b/src/app/componentes/habilidades/edit-habilidad.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="hab">
   <div class="row">
-      <div>
+      <div id="editH">
           <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
               <div class="form-group">
                   <label for="nombre">Habilidad</label>
@@ -8,7 +8,7 @@
               </div>
               <div class="form-group">
                   <label for="tiempoDeExperiencia">Tiempo de Experiencia (Aproximado)</label>
-                  <input type="text" class="form-control" id="tiempoDeExperiencia" name="tiempoDeExperiencia" [(ngModel)]="hab.tiempoDeExperiencia" required>
+                  <input type="text" class="form-control" id="tiempoDeExperiencia" name="tiempoDeExperiencia" [(ngModel)]="hab.tiempoDeExperiencia" >
               </div>
               <div class="form-group">
                 <label for="porcentaje">Porcentaje (Aproximado)</label>
