--- a/src/app/componentes/habilidades/habilidades.component.html
+++ b/src/app/componentes/habilidades/habilidades.component.html
@@ -1,6 +1,6 @@
  <!-- Habilidades -->
  <div class="skills">
-  <h2 class="skills-h2">Skills</h2>
+  <h2 class="skills-h2">Habilidades</h2>
   <div class="col-lg-2">
 
     <button type="button" class="btn btn-success" routerLink="/nuevahab" *ngIf="isLogged">
@@ -8,16 +8,20 @@
   </button>
 
 </div>
-<div *ngFor="let habi of habilidades">
-  <h4 class="skills-h5">{{habi.nombre}} </h4>
-  <h6>({{habi.tiempoDeExperiencia}})</h6>
+<div *ngFor="let habi of habilidades" id="habi-group">
+  <h4 class="skills-h5"><b>{{habi.nombre}} </b>  {{habi.tiempoDeExperiencia}}  </h4>
+
   <div class="progress" style="height: 25px;">
     <div class="progress-bar bg-success prueba-bar" [ngStyle]="{'width': habi.porcentaje  + '%'}" role="progressbar"  aria-valuenow="25"
       aria-valuemin="0" aria-valuemax="100">{{habi.porcentaje}}%</div>
+    </div>
+
+    <div id="buttons-group">
+    <div  *ngIf="isLogged"><button class="btn btn-warning" routerLink="/edithab/{{habi.id}}">
+      <i class="bi bi-pencil-fill"></i> Editar</button></div>
+    <div  *ngIf="isLogged"> <button class="btn btn-danger" (click)="delete(habi.id)">
+      <i class="bi bi-trash-fill"></i> Borrar</button></div>
+    </div>
   </div>
-  <div  *ngIf="isLogged"><button class="btn btn-warning" routerLink="/edithab/{{habi.id}}">
-    <i class="bi bi-pencil-fill"></i> Editar</button></div>
-  <div  *ngIf="isLogged"> <button class="btn btn-danger" (click)="delete(habi.id)">
-    <i class="bi bi-trash-fill"></i> Borrar</button></div>
-</div>
-</div>
+    </div>
+
