--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -6,7 +6,7 @@
 
           <div class="card-body p-5 text-center">
 
-            <h3 class="mb-5">Incie Sesión</h3>
+            <h3 class="mb-5">¡Bienvenido!</h3>
             <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
             <div class="form-outline mb-4">
               <input type="text" id="nombreUsuario" class="form-control form-control-lg" name="nombreUsuario" [(ngModel)]="nombreUsuario" required/>
@@ -20,7 +20,7 @@
 
 
 
-            <button class="btn btn-primary btn-lg btn-block" type="submit" >Ir</button>
+            <button class="btn btn-primary btn-lg btn-block" type="submit" >Inciar Sesión</button>
 
           </form>
           </div>
