--- a/src/app/componentes/presentacion/edit-presentacion.component.html
+++ b/src/app/componentes/presentacion/edit-presentacion.component.html
@@ -1,6 +1,6 @@
-<div class="container" *ngIf="persona">
+<div class="container" *ngIf="persona" >
   <div class="row">
-      <div>
+      <div id="editP">
           <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
               <div class="form-group">
                   <label for="nombre">Nombre</label>
@@ -26,6 +26,10 @@
         <label for="urlFoto">URL de la foto</label>
         <input type="text" class="form-control"  name="urlFoto" [(ngModel)]="persona.urlFoto" required>
     </div>
+    <div class="form-group">
+      <label for="tituloProfesional">Titulo profesional</label>
+      <input type="text" class="form-control"  name="tituloProfesional" [(ngModel)]="persona.tituloProfesional" required>
+  </div>
               <button class="btn btn-primary">
                   Actualizar
               </button>
