--- a/src/app/componentes/presentacion/presentacion.component.css
+++ b/src/app/componentes/presentacion/presentacion.component.css
@@ -1,4 +1,15 @@
 td{
   color: white;
   border-style: none ;
+  padding-left: 0;
+}
+
+#presentacion{
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 0
+}
+
+div, h2{
+  padding: 0;
 }
