--- a/src/app/componentes/proyectos/edit-proyecto.component.html
+++ b/src/app/componentes/proyectos/edit-proyecto.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="proy">
   <div class="row">
-      <div>
+      <div id="editP">
           <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
               <div class="form-group">
                   <label for="nombre">Nombre del proyecto</label>
