--- a/src/app/componentes/proyectos/proyectos.component.css
+++ b/src/app/componentes/proyectos/proyectos.component.css
@@ -1,12 +1,12 @@
 
 .proyect-h2{
   margin: auto;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
+  text-align: start;
   }
 
   .card{
-    max-width: 18rem;
-    min-width: 18rem;
+
     background-color: rgb(25, 135, 84);
     padding-left: 10px ;
     padding-right: 10px;
@@ -16,15 +16,21 @@
     margin-right: 10px;
     margin-left: 10px;
     border-radius: 25px;
-    text-decoration: none;
     color: white;
-
+    text-align: center;
+    align-items: center;
   }
 
-  .proyect-cards{
+#cards-group{
   display: flex;
-  justify-content: space-between;
-  margin-left: 15px;
-  margin-right: 15px;
-    flex-wrap: wrap;
+  flex-wrap: wrap;
 }
+
+#button-group{
+  display: flex;
+}
+
+button{
+  margin: 10px;
+}
+
