--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 
   <div class="container-fluid bg">
 
-    <div>
+    <div class="logo-hashtag">
       <a href=index.html><img id="logo" src="../../../assets/img/Logo arg prog.png"></a>
       <a class="hashtag"
         href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa">#YoProgramo</a>
@@ -11,7 +11,7 @@
     <div class="redes">
       <a class="margenRedes" href="https://github.com/SantiDure">GitHub</a>
       <a class="margenRedes" href="https://www.linkedin.com/in/santiago-dur%C3%A9-9699571ba">Linkedin</a>
-      <a class="margenRedes" href="https://www.instagram.com/santiagodure">Instagram</a>
+      <a class="margenRedes" href="https://www.instagram.com/santiagodure">IG</a>
       <!-- <a class="margenRedes" href=#>Telegram</a>       -->
       <!-- <button class="login">login</button> -->
       <button type="button" class="btn btn-success login" (click)="login()"*ngIf="!isLogged">Iniciar sesión</button>
