--- a/src/styles.css
+++ b/src/styles.css
@@ -60,14 +60,14 @@ body{
 .acerca-de{
   color: white;
   background-image: linear-gradient(rgba(5,7,12,0.75),rgba(5,7,12,0.75)),
-   url(../src/assets/img/banner.jpg);
+   url(../src/assets/img/banner.jpg) ;
    border-bottom-right-radius: 5%;
    border-bottom-left-radius: 5%;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   margin-bottom: 10px ;
-
+width: 100%;
 }
 
 .login{
